--- a/index.html
+++ b/index.html
@@ -7,12 +7,58 @@
     <title>Prework Study Guide</title>
   </head>
   <body>
-    <header id="header">
+    <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage, metadata and title.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>h1-h6- heading sizes</li>
+          <li>p- paragraph, adds text</li>
+          <li>ul- unordered list</li>
+          <li>ol- ordered lists</li>
+          <li>li- list items</li>
+          <li>img- displays images, src, alt, width, height</li>
+          <li>br /- line break</li>
+          <li>a- anchor for links, href="UTL here" then text</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="css-section">
+
+   
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>git branch -d branch-name: deletes branch</li>
+          <li>git clone (ssh): copy from github to local</li>
+          <li>git add -A: add current branch to stage, -A:all changes</li>
+          <li>git commit -m "message for commit": updates branch</li>
+          <li>git pull origin main: updates project on local comupter, do before all work</li>
+          <li>git push origin branch name: push branch/local changes to Github</li>
+          <li>Repository (repo)— a folder in which all files and their version histories are stored.</li>
+          <li>Branch— a workspace in which you can make changes that won’t affect the live site.</li>
+          <li>Markdown (.md)— a way to write in Github that converts plain text to GitHub code. Sites such as Atom and Sublime Text are examples of free resources for developers using Markdown.</li>
+          <li>Commit Changes— a saved record of a change made to a file within the repo.</li>
+          <li>Pull Request (PR)— the way to ask for changes made to a branch to be merged into another branch that also allows for multiple users to see, discuss and review work being done.</li>
+          <li>Merge— after a pull request is approved, the commit will be pulled in (or merged) from one branch to another and then, deployed on the live site</li>
+          <li>Issues— how work is tracked when using git. Issues allow users to report new tasks and content fixes, as well as allows users to track progress on a project board from beginning to end of a specific project.</li>
+          <li>Federalist— a platform that securely deploys a website from a GitHub repository in minutes and lets users preview proposed and published changes.</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="javascript-section">
+
+   
+      </section>
     </main>
 
     <footer>
