added CSS to project

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prework Study Guide</title>
+    <link rel="stylesheet" href="./assets/style.css">
   </head>
   <body>
     <header id="top">
@@ -24,12 +25,17 @@
           <li>li- list items</li>
           <li>img- displays images, src, alt, width, height</li>
           <li>br /- line break</li>
-          <li>a- anchor for links, href="UTL here" then text</li>
+          <li>a- anchor for links, href="URL here" then text</li>
         </ul>
       </section>
    
       <section class="card" id="css-section">
-
+        <h2>CSS</h2>
+        <ul>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>Class attribute selector- to add rules to marked tags, starts with period (.card) added to section class tag</li>>
+        </ul>
    
       </section>
    
@@ -56,7 +62,10 @@
       </section>
    
       <section class="card" id="javascript-section">
-
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter you JavaScript notes here</li>
+        </ul>
    
       </section>
     </main>
