added new JavaScript

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter you JavaScript notes here</li>
+          <li>variables store data</li>
+          <li>loops iterate, useful for arrays</li>
+          <li>functions to block code in sections and call code later</li>
         </ul>
    
       </section>
